--- a/about.css
+++ b/about.css
@@ -85,15 +85,56 @@ body{
     .topic{
         text-align: center;
         
+        
     }
     .about{
         background-color: yellow;
+    
+        
     }
 .desc{
     line-height: 2;
 }
-
-
+.Gallery{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  background-color: red;
+}
+.slide-container {
+  margin: auto;
+  width:70%;
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+.slide {
+  display: none;   /* hide all images by default */
+  width: 100%;     /* images fill the container width */
+  
+  border-radius: 10px;
+}
+.arrow1{
+  margin-left:10px;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 5px;
+  padding: 5px;
+}
+.arrow2{
+  margin-right:10px;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 5px;
+  padding: 5px;
+}
+.prev, .next {
+  background: rgba(0,0,0,0.5); /* dark transparent circle */
+  color: white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.next { right: 20px; }  /* move next button to right side */
+.prev { left: 50px; }   /* move prev button to left side */
 
 
 
@@ -137,7 +178,13 @@ body{
         background-color: rgba(255, 255, 255, 0.2);
       }
 
+      .arrow1{
+        margin-left: 30px;
+      }
+      .arrow2{
+        margin-right:30px;
       
+      }
     }
 
     /* Desktop styles (1024px+) */
@@ -158,7 +205,12 @@ body{
         font-size: 18px;
         padding: 12px 20px;
       }
-
+      .arrow1{
+        margin-left: 50px;
+      }
+      .arrow2{
+        margin-right: 50px;
+      }
      
     }
 
@@ -175,6 +227,13 @@ body{
       .options li h2 {
         font-size: 20px;
         padding: 15px 25px;
+      }
+      .arrow1{
+        margin-left: 70px;
+      }
+      .arrow2{
+        margin-right:70px;
+      
       }
     }
 
