--- a/contact.css
+++ b/contact.css
@@ -81,7 +81,69 @@ body{
     .options li h2:hover {
       background-color: rgba(255, 255, 255, 0.1);
     }
-
+   .topic{
+        text-align: center;
+        margin-bottom: 10px;
+        
+        
+    }
+  .map{
+     
+      display: flex;
+      justify-content: center;
+    }
+    .gmap{
+      width:80%;
+      height: 200px;
+     
+    }
+    .contact-form{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        margin-bottom: 10px;
+      }
+      #name{
+        width: 40%;
+      }
+      #email{
+        width: 40%;
+      }
+      #message{
+        width: 80%;
+      }
+      .success{
+        background-color: yellow;
+        width:90%;
+        border-radius: 5px;
+        display: none;
+      }
+      .submit{
+        width: 20%;
+        border-radius: 5px;
+        cursor: pointer;
+        
+      }
+  .footer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .hours{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+  }
+ 
+  .socials img{
+    width:40px;
+    margin:10px;
+  }
    
 
     /* Tablet styles (768px+) */
@@ -120,9 +182,28 @@ body{
       .options li h2:hover {
         background-color: rgba(255, 255, 255, 0.2);
       }
-
+      .gmap{
+        height: 200px;
+      }
+       #name{
+        width: 20%;
+      }
+      #email{
+        width: 20%;
+      }
+      .submit{
+        width: 5%;
+        
+      }
+      .socials img{
+        width:60px;
+        margin:20px;
+  }
+      
+   
      
     }
+    
 
     /* Desktop styles (1024px+) */
     @media screen and (min-width: 1024px) {
@@ -142,10 +223,14 @@ body{
         font-size: 18px;
         padding: 12px 20px;
       }
-
-      .title {
-        margin-top: 30px;
+      .gmap{
+        height: 300px;
       }
+      .socials img{
+        width:80px;
+        margin:30px;
+  }
+      
     }
 
     /* Large Desktop styles (1200px+) */
@@ -161,6 +246,9 @@ body{
       .options li h2 {
         font-size: 20px;
         padding: 15px 25px;
+      }
+      .gmap{
+        height: 400px;
       }
     }
 
