--- a/about.css
+++ b/about.css
@@ -1,7 +1,10 @@
 body{
     margin:0px;
     padding: 0px;
-    background-color: red;
+    background-color: yellow;
+    background-image: url("img/bg_pattern.jpg");
+    background-repeat: repeat;
+    background-size: cover; /* make it cover the entire element */
 }
 
 * {
@@ -18,7 +21,8 @@ body{
     padding: 15px 20px;
     background-color: red;
     position: relative;
-    width:100%
+    width:100%;
+    border-bottom: 5px solid darkred;
 }
 
 .burger_logo{
@@ -83,12 +87,20 @@ body{
     }
 
     .topic{
+        
+        margin: 10px auto; 
+        width:50%;
         text-align: center;
+        border-radius: 50px;
+        background-color: yellow;
+        margin-bottom: 50px;  
+        
         
         
     }
     .about{
         background-color: yellow;
+        opacity: .9;
     
         
     }
@@ -184,6 +196,11 @@ body{
       .arrow2{
         margin-right:30px;
       
+      }
+      .topic{
+        width: 20%;
+        margin-top: 20px;
+        margin-bottom: 20px;
       }
     }
 
